@@ -3,12 +3,13 @@
     xmlns:five="http://namespaces.zope.org/five"
     xmlns:genericsetup="http://namespaces.zope.org/genericsetup"
     i18n_domain="Products.PloneKeywordManager">
-    
-  <genericsetup:importStep
-    name="keywords"
-    title="Create or update keywords"
-    description="Create all keywords"
-    handler=".setuphandlers.importKeywords" />
+
+  <!-- Include configuration for dependencies listed in setup.py -->
+  <includeDependencies package="." />
+
+  <!-- register all skins-folders all at once -->
+  <cmf:registerDirectory name="skins" directory="skins" recursive="True" />
+
 
   <genericsetup:registerProfile
     name="default"
@@ -17,6 +18,13 @@
     description="Keyword manager"
     provides="Products.GenericSetup.interfaces.EXTENSION"
     />
+
+  <genericsetup:importStep
+    name="keywords"
+    title="Create or update keywords"
+    description="Create all keywords"
+    handler=".setuphandlers.importKeywords">
+  </genericsetup:importStep>
 
   <!-- Place the exportstep here -->
 
