@@ -1,0 +1,7 @@
+<?xml version="1.0"?>
+
+<action-icons  i18n:domain="plone">
+
+  <action-icon category="controlpanel" action_id="keywordmanager" remove="True" />
+
+</action-icons>
