@@ -1,0 +1,7 @@
+<?xml version="1.0"?>
+
+<object name="portal_controlpanel" meta_type="Plone Control Panel Tool">
+
+  <configlet title="Keyword Manager" action_id="keywordmanager" remove="True" />
+
+</object>
