@@ -1,0 +1,5 @@
+<?xml version="1.0"?>
+<metadata>
+  <version>1</version>
+  <description>Keyword manager</description>
+</metadata>
